revert settings .vscode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,10 +84,7 @@
         "execution": "cpp",
         "numbers": "cpp",
         "forward_list": "cpp",
-        "print": "cpp",
-        "cerrno": "cpp",
-        "iterator": "cpp",
-        "format": "cpp"
+        "print": "cpp"
     },
     "makefile.makeDirectory": "src",
     "c-cpp-flylint.clang.includePaths": [
