fix release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,12 +10,14 @@ jobs:
       - name: Generate Version
         id: generate-version
         run: echo "version=$(date +'%-y.%-m.%-d')" >> "$GITHUB_OUTPUT"
+      - name: Checkout repository
+        uses: actions/checkout@v2
       - name: Extract Release Notes
         id: extract-release-notes
         run: |
           VERSION=$(echo "${{ steps.generate-version.outputs.version }}")
           # Try to extract section for the current version first
-          RELEASE_NOTES=$(awk -v ver="$VERSION" '/^## v"ver"/ {flag=1; next} /^## / {flag=0} flag {print}' CHANGELOG.md | sed '/^[[:space:]]*$/d')
+          RELEASE_NOTES=$(awk -v ver="$VERSION" '$0 ~ ("^## v" ver) {flag=1; next} /^## / {flag=0} flag {print}' CHANGELOG.md | sed '/^[[:space:]]*$/d')
           # If empty, fall back to [Unreleased]
           if [ -z "$RELEASE_NOTES" ]; then
             RELEASE_NOTES=$(awk '/^## \[Unreleased\]/ {flag=1; next} /^## / {flag=0} flag {print}' CHANGELOG.md | sed '/^[[:space:]]*$/d')
