--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
           sudo apt-get install pari-gp
           # Install Lean 4 via elan (official installer)
           curl https://raw.githubusercontent.com/leanprover/elan/master/elan-init.sh -sSf | sh -s -- -y
+          source ~/.elan/env
           echo "$HOME/.elan/bin" >> $GITHUB_PATH
           gp --version
           lean --version
