--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,11 @@
 /src/loda
 /src/loda.exe
 /tests/programs/local/
+/tests/test_output_*/
 /loda
 /loda.exe
 /completer.hist
 /.settings/
 pari-loda-*.gp
 _codeql_detected_source_root
-./tests/test_output_*/
+/openapi.v2.yaml
