--- a/src/Makefile
+++ b/src/Makefile
@@ -15,7 +15,7 @@ OBJS = base/uid.o \
   gen/blocks.o gen/generator.o gen/generator_v1.o gen/generator_v2.o gen/generator_v3.o gen/generator_v4.o gen/generator_v5.o gen/generator_v6.o gen/generator_v7.o gen/generator_v8.o gen/iterator.o \
   lang/analyzer.o lang/comments.o lang/constants.o lang/parser.o lang/program.o lang/program_cache.o lang/program_util.o lang/subprogram.o lang/virtual_seq.o \
   math/big_number.o math/number.o math/sequence.o \
-  mine/api_client.o mine/checker.o mine/config.o mine/distribution.o mine/extender.o mine/finder.o mine/invalid_matches.o mine/matcher.o mine/mine_manager.o mine/miner.o mine/mutator.o mine/reducer.o mine/stats.o \
+  mine/api_client.o mine/checker.o mine/config.o mine/distribution.o mine/extender.o mine/finder.o mine/invalid_matches.o mine/matcher.o mine/mine_manager.o mine/miner.o mine/mutator.o mine/reducer.o mine/stats.o mine/submission.o \
   seq/managed_seq.o seq/seq_index.o seq/seq_list.o seq/seq_loader.o seq/seq_program.o seq/seq_util.o \
   sys/csv.o sys/file.o sys/git.o sys/jute.o sys/log.o sys/metrics.o sys/process.o sys/setup.o sys/util.o sys/web_client.o
 
